# omniwheel_base

./: CMakeLists.txt  LICENSE  package.xml
config/: gambot.yaml  joint_velocity.yaml
launch/: gambot_sim.launch
msg/: Movement.msg
src/: kinematics.cpp  main.cpp  odometry.cpp
src/sensor/: encoder.cpp
srv/: KinematicsForward.srv  KinematicsInverse.srv
urdf/: description.urdf  gambot.urdf  stand.urdf
xacro/: main.urdf.xacro  rim.urdf.xacro  roller.urdf.xacro
