<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omniwheel_base2</name>
  <version>0.0.1</version>
  <description>Omnidirectional robot base model for ROS2</description>
  <maintainer email="eetu.silvennoinen@gmail.com">Eetu Silvennoinen</maintainer>
  <license>Apache-2.0</license>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>controller_interface</depend>
  <depend>effort_controllers</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
